feat:added resume drive link

--- a/index.html
+++ b/index.html
@@ -548,7 +548,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 					                  <i class="icon-pen2"></i>
 					               </div>
 					               <div class="timeline-label">
-					               	<h2><a href="#">Backend Developer at NUPAT TECHNOLOGIES</a> <span>Sep 2022 - Feb 2023</span></h2>
+					               	<h2><a href="#">Backend Developer at Nupat Technologies</a> <span>Sep 2022 - Feb 2023</span></h2>
 					                  <p>As a Backend Developer at Nupat Technologies, I am responsible for building and designing APIs for a school management portal. I facilitate students in backend development and DevOps, and assist the frontend team with API integration. Additionally, I manage the deployment of applications to Azure cloud services, including Azure Container Registry (ACR), Azure Kubernetes Service (AKS), Blob Storage, and Azure DevOps for CI/CD pipelines.</p>
 					               </div>
 					            </div>
@@ -611,7 +611,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 							<div class="project" style="background-image: url(images/uwana-blog.png);border: 1px solid #cdcdcd;">
 								<div class="desc">
 									<div class="con">
-										<h3><a href="https://uwanaconnect.com/blog" target="_blank">Work 05</a></h3>
+										<h3><a href="https://uwanaconnect.com/blog" target="_blank">Uwana</a></h3>
 										<span>Uwana Energy Blog</span>
 										<p class="icon">
 											<span><a href="https://uwanaconnect.com/blog" target="_blank"><i class="icon-share3"></i></a></span>
@@ -626,7 +626,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 							<div class="project" style="background-image: url(images/uwana-rewards.png);border: 1px solid #cdcdcd;">
 								<div class="desc">
 									<div class="con">
-										<h3><a href="https://uwanaconnect.com/register" target="_blank">Work 08</a></h3>
+										<h3><a href="https://uwanaconnect.com/register" target="_blank">Uwana</a></h3>
 										<span>Uwana Rewards</span>
 										<p class="icon">
 											<span><a href="https://uwanaconnect.com/register" target="_blank"><i class="icon-share3"></i></a></span>
@@ -656,7 +656,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 							<div class="project" style="background-image: url(images/sokozuri-addcart.png);border: 1px solid #cdcdcd;">
 								<div class="desc">
 									<div class="con">
-										<h3><a href="https://www.sokozuri.com/cart" target="_blank">Sokozuri</a></h3>
+										<h3><a href="https://www.sokozuri.com/cart" target="_blank">Sokozuri Africa</a></h3>
 										<span>IP Analyser</span>
 										<p class="icon">
 											<span><a href="https://www.sokozuri.com/cart" target="_blank"><i class="icon-share3"></i></a></span>
@@ -671,7 +671,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 							<div class="project" style="background-image: url(images/sokozuri-cart1.png);border: 1px solid #cdcdcd;">
 								<div class="desc">
 									<div class="con">
-										<h3><a href="https://www.sokozuri.com/cart" target="_blank">Sokozuri</a></h3>
+										<h3><a href="https://www.sokozuri.com/cart" target="_blank">Sokozuri Africa</a></h3>
 										<span>Qoinpal Waitlist</span>
 										<p class="icon">
 											<span><a href="https://www.sokozuri.com/cart" target="_blank"><i class="icon-share3"></i></a></span>
@@ -686,7 +686,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 							<div class="project" style="background-image: url(images/tanta.png); border: 1px solid #cdcdcd;">
 								<div class="desc">
 									<div class="con">
-										<h3><a href="https://dashboard.sokozuri.com/" target="_blank">Work 04</a></h3>
+										<h3><a href="https://dashboard.sokozuri.com/" target="_blank">Sokozuri Africa</a></h3>
 										<span>Sokozuri</span>
 										<p class="icon">
 											<span><a href="https://dashboard.sokozuri.com/" target="_blank"><i class="icon-share3"></i></a></span>
@@ -701,7 +701,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 							<div class="project" style="background-image: url(images/sokozuri-web.png);border: 1px solid #cdcdcd;">
 								<div class="desc">
 									<div class="con">
-										<h3><a href="https://www.sokozuri.com/" target="_blank">Work 09</a></h3>
+										<h3><a href="https://www.sokozuri.com/" target="_blank">Sokozuri Africa</a></h3>
 										<span>Sokozuri</span>
 										<p class="icon">
 											<span><a href="https://www.sokozuri.com/" target="_blank"><i class="icon-share3"></i></a></span>
@@ -732,7 +732,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 								<div class="desc">
 									<div class="con">
 										<h3><a href="https://vyc-c5zkr.ondigitalocean.app/" target="_blank">VYC</a></h3>
-										<span>Rise Vest</span>
+										<span>Verify Your Customer</span>
 										<p class="icon">
 											<span><a href="https://vyc-c5zkr.ondigitalocean.app/" target="_blank"><i class="icon-share3"></i></a></span>
 											<span><a href="https://vyc-c5zkr.ondigitalocean.app/" target="_blank"><i class="icon-eye"></i> 100</a></span>
@@ -747,7 +747,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 								<div class="desc">
 									<div class="con">
 										<h3><a href="https://vyc-c5zkr.ondigitalocean.app/" target="_blank">VYC</a></h3>
-										<span>Ron Beauty store</span>
+										<span>Verify Your Customer</span>
 										<p class="icon">
 											<span><a href="https://vyc-c5zkr.ondigitalocean.app/" target="_blank"><i class="icon-share3"></i></a></span>
 											<span><a href="https://vyc-c5zkr.ondigitalocean.app/" target="_blank"><i class="icon-eye"></i> 100</a></span>
